main: :bug: fix EXCEPTION FROM SIMULATION error -> http://dontpad.com/EXCEPTION%20FROM%20SIMULATION

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,3 +29,7 @@ allprojects {
         jcenter()
     }
 }
+
+configurations {
+    all*.exclude group: 'com.android.support', module: 'support-v4'
+}
