--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -37,8 +37,7 @@ android {
 }
 
 dependencies {
-    // Please replace this 6+ with a specific number:
-  compile 'com.google.android.gms:play-services-base:6+' //For GCM (Google Cloud Messaging)
+  compile 'com.google.android.gms:play-services-gcm:7.8.0'
   compile('com.netflix.rxjava:rxjava-android:' + external.rx.version) {
     exclude group: 'com.netflix.rxjava'
   }
