--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
 
                 <data
                     android:host="sneer.me"
-                    android:pathPrefix="/public-key"
+                    android:pathPrefix="/invite"
                     android:scheme="http" />
             </intent-filter>
         </activity>
