--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: '../sdktools.gradle'
 
 version = '0.1.7'
 description = 'API for Sneer, the sovereign platform.'
@@ -11,8 +12,9 @@ android {
     abortOnError false
   }
 
-  compileSdkVersion external.android.sdkVersion
-  buildToolsVersion external.android.buildToolsVersion
+  compileSdkVersion project.getSDKIfPossible(22)
+  buildToolsVersion project.getHighestAvailableTools("22.0.1")
+
 
   defaultConfig {
     minSdkVersion external.android.minSdkVersion
