--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,7 @@ ext {
     rx: [version: '0.20.7'],
     'clojure.core.match': 'org.clojure:core.match:0.2.2',
     android: [
-        sdkVersion: 22,             // When you change these numbers,
-        minSdkVersion: 16,          // please revise this entire page:
-        buildToolsVersion: '22.0.1'   // https://github.com/sneerteam/sneer/wiki/Android-Development-Environment-Installation
+        minSdkVersion: 16
     ]
   ]
 }
