main: useLibrary http.legacy. HttpClient is deprecated on api 23+. "Android is moving away from OpenSSL to the BoringSSL library" https://developer.android.com/preview/behavior-changes.html#behavior-apache-http-client

--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -3,6 +3,8 @@ apply from: '../sdktools.gradle'
 
 android {
 
+  useLibrary 'org.apache.http.legacy'
+
   dexOptions {
     javaMaxHeapSize "4g"
     jumboMode true
