--- a/android/android.main/src/main/AndroidManifest.xml
+++ b/android/android.main/src/main/AndroidManifest.xml
@@ -79,10 +79,10 @@
         <activity
             android:name="sneer.android.ui.SystemReportActivity"
             android:label="@string/title_activity_system_report"
-            android:parentActivityName="sneer.android.ui.ConvoActivity">
+            android:parentActivityName="sneer.android.ui.ConvosActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="sneer.android.ui.ConvoActivity" />
+                android:value="sneer.android.ui.ConvosActivity" />
         </activity>
         <activity
             android:name="sneer.android.ui.AcceptInviteActivity"
@@ -91,7 +91,7 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="sneer.android.ui.ConvoActivity" />
+                android:value="sneer.android.ui.ConvosActivity" />
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -112,7 +112,7 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="sneer.android.ui.ConvoActivity" />
+                android:value="sneer.android.ui.ConvosActivity" />
         </activity>
     </application>
 
