--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ ext {
     'clojure.core.match': 'org.clojure:core.match:0.2.2',
     'clojure.core': 'org.clojure:clojure:1.7.0-alpha5',
     'clojure.core.async': 'org.clojure:core.async:0.1.346.0-17112a-alpha',
+    'clojure.core.cache': 'org.clojure:core.cache:0.6.4',
   ]
 }
 
