--- a/sonatype.gradle
+++ b/sonatype.gradle
@@ -28,7 +28,7 @@ if (shouldPublish) {
 afterEvaluate {
   uploadArchives {
 
-    //onlyIf { ourJar.didWork || javadocJar.didWork || sourcesJar.didWork }
+    onlyIf { ourJar.didWork || javadocJar.didWork || sourcesJar.didWork }
 
     repositories {
       if (!shouldPublish) {
