--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ project(':sneer-java-api').projectDir = new File('java-api')
 include ':crypto',
         ':core',
         ':server',
+	':http-api',
         ':java-api.tests',
         ':core.tests'
